# philosophers_sim

./: CMakeLists.txt
glad/code/: CMakeLists.txt  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
inc/: philosopher.h
md/: 基于 Linux 的哲学家进餐并发模拟器.md
shaders/: basic.fs  basic.vs
src/: main.cpp  philosopher.cpp
